---------------------------------------------------------------------------------------------------
Version: 3.3.2
Date: ????
  Bugfixes:
    - Fixed a crash when a favorites entry was removed from the game (#107)
---------------------------------------------------------------------------------------------------
Version: 3.3.1
Date: 2022-03-12
  Changes:
    - Updated Korean locale (by x2605) (#101)
    - Updated Russian locale (by Astorin) (#103)
  Bugfixes:
    - Fixed a crash when the first item group has no visible members in visual search (#102)
    - Fixed a crash when using navigation hotkeys before opening an info GUI (#105)
---------------------------------------------------------------------------------------------------
Version: 3.3.0
Date: 2022-03-01
  Features:
    - Added new properties:
      - [NEW] Beacon: size, effect area, distribution effectivity, module slots, accepted modules, unlocked by, placed by
      - Equipment: buffer capacity, placed in
      - Fluid: fuel pollution
      - [NEW] Generator: fluid consumption, minimum / maximum temperatures, max power production, base pollution, can burn, unlocked by, and placeable by
    - Added Korean locale (by x2605) (#97)
    - Added visual mode to the search GUI, providing a more vanilla-like search interface
      - This interface can only show items and fluids
  Changes:
    - Any blueprintable entity may be shift+clicked to get a blueprint of it, regardless of whether or not it has a recipe (#91)
    - Category and group table items are hidden by default
    - Consolidated all machines into a single "entity" type
    - Fluid temperature variants are now sorted and placed adjacent to their base fluid in search results
    - Refactored all GUI code to improve modularity and significantly cleaned up the codebase
    - Technology unlocks equipment, unlocks fluids, unlocks items, and unlocks machines are hidden by default